--- a/POSVTA4/POSV4PASS.html
+++ b/POSVTA4/POSV4PASS.html
@@ -1666,7 +1666,12 @@ const venta = {
     if (it.comision_tipo === "porcentaje" && it.comision_valor) {
       comision_monto = +((it.importe * it.comision_valor) / 100).toFixed(2);
     }
+    // 🟨 POR PIEZA (CIGARROS)
+    if (it.comision_tipo === "pieza" && it.comision_valor) {
+    comision_monto = +(it.cantidad * it.comision_valor).toFixed(2);
+    }
 
+    
     // 🔼 acumular
     comision_total += comision_monto;
 
