--- a/POSVTA4/POSV4PASS.html
+++ b/POSVTA4/POSV4PASS.html
@@ -949,58 +949,57 @@ window.delItem=delItem;
    🧮 SECCIÓN 8: CÁLCULO DE TOTALES CON DESCUENTO (OPTIMIZADO)
    =========================================================== */
 function calcularTotales(descPorc = 0) {
-  let subtotal = 0, iva = 0, ieps = 0, total = 0;
-  let subtotalElegible = 0, subtotalNoElegible = 0;
+  let subtotal = 0, iva = 0, ieps = 0;
+  let subtotalElegible = 0;
 
-  // 💰 Asegura que el porcentaje de descuento sea válido (0–100)
   const descuento = Math.min(100, Math.max(0, descPorc || 0)) / 100;
 
-  // 🔢 Recorre todos los productos del carrito
-carrito.forEach(it => {
-  const imp = it.cantidad * it.precioUnit;
+  carrito.forEach(it => {
+    const imp = it.cantidad * it.precioUnit;
 
-  const ivaT  = Number(it.ivaTasa || 0);
-  const iepsT = Number(it.iepsTasa || 0);
+    const ivaT  = Number(it.ivaTasa || 0);
+    const iepsT = Number(it.iepsTasa || 0);
 
-  let base = imp;
-  if (iepsT > 0 && ivaT > 0) base = imp / (1 + iepsT + ivaT * (1 + iepsT));
-  else if (iepsT > 0) base = imp / (1 + iepsT);
-  else if (ivaT > 0) base = imp / (1 + ivaT);
+    let base = imp;
+    if (iepsT > 0 && ivaT > 0) base = imp / (1 + iepsT + ivaT * (1 + iepsT));
+    else if (iepsT > 0) base = imp / (1 + iepsT);
+    else if (ivaT > 0) base = imp / (1 + ivaT);
 
-  const ivaCalc  = +(base * ivaT).toFixed(2);
-  const iepsCalc = +(base * iepsT).toFixed(2);
+    const ivaCalc  = +(base * ivaT).toFixed(2);
+    const iepsCalc = +(base * iepsT).toFixed(2);
 
-  it.iva_calculado  = ivaCalc;
-  it.ieps_calculado = iepsCalc;
+    it.iva_calculado  = ivaCalc;
+    it.ieps_calculado = iepsCalc;
 
-  subtotal += base;
-  iva += ivaCalc;
-  ieps += iepsCalc;
-  total += imp;
+    subtotal += base;
+    iva += ivaCalc;
+    ieps += iepsCalc;
 
-  // 🔥 AQUÍ SE DEFINE QUIÉN RECIBE DESCUENTO
-  if (it.permite_descuento) {
-    subtotalElegible += base;
-  } else {
-    subtotalNoElegible += base;
-  }
-});
+    if (it.permite_descuento) {
+      subtotalElegible += base;
+    }
+  });
 
-  // 🧮 Cálculo seguro de descuentos (sin dividir por cero)
+  // 🔥 DESCUENTO
   const montoDesc = subtotalElegible * descuento;
-  const proporción = subtotal > 0 ? montoDesc / subtotal : 0;
 
-  // 💸 Totales finales
+  // 🔥 FACTOR DE PRORRATEO
+  const factorDesc = subtotal > 0
+    ? (subtotal - montoDesc) / subtotal
+    : 1;
+
+  // 🔥 TOTALES FINALES
   const subtotalFinal = subtotal - montoDesc;
-  const ivaFinal = iva - (iva * proporción);
-  const iepsFinal = ieps - (ieps * proporción);
+  const ivaFinal = iva * factorDesc;
+  const iepsFinal = ieps * factorDesc;
   const totalFinal = subtotalFinal + ivaFinal + iepsFinal;
 
   return {
     subtotal: +subtotal.toFixed(2),
     descuento: +montoDesc.toFixed(2),
     impuestos: +(ivaFinal + iepsFinal).toFixed(2),
-    total: +totalFinal.toFixed(2)
+    total: +totalFinal.toFixed(2),
+    factorDesc   // 👈 AQUÍ VA
   };
 }
 
@@ -1036,6 +1035,9 @@ function render() {
   const tbody = $("#tbody");
   tbody.innerHTML = "";
 
+  const tot = calcularTotales(descuentoAutorizado);
+  const factorDesc = tot.factorDesc || 1;
+  
   carrito.forEach(it => {
     const tr = document.createElement("tr");
     tr.innerHTML = `
@@ -1045,7 +1047,14 @@ function render() {
           style="width:70px;text-align:center"
           onchange="actualizarCantidad('${it.id}', this.value)">
       </td>
-      <td style="text-align:right">${money(it.importe)}</td>
+      <td style="text-align:right">
+  ${money(
+    it.permite_descuento
+      ? it.importe * factorDesc
+      : it.importe
+  )}
+</td>
+
       <td class='del-col'>
         <button class='del' onclick="delItem('${it.id}')">×</button>
       </td>`;
@@ -2058,6 +2067,13 @@ const precioUnit = p.precioUnit ?? p.precio_unit ?? 0;
 const subtotal = v.resumen_financiero.subtotal || 0;
 const descMonto = v.descuento_monto || 0;
 const factorDesc = subtotal > 0 ? (subtotal - descMonto) / subtotal : 1;
+return {
+  subtotal: +subtotal.toFixed(2),
+  descuento: +montoDesc.toFixed(2),
+  impuestos: +(ivaFinal + iepsFinal).toFixed(2),
+  total: +totalFinal.toFixed(2),
+  factorDesc   // 👈🔥 CLAVE
+};
 
 let precioConDesc = precioUnit * factorDesc;
 
