--- a/POSVTA4/POSV4PASS.html
+++ b/POSVTA4/POSV4PASS.html
@@ -1586,11 +1586,11 @@ $("#btnConfirmarCobro").onclick = async () => {
   ⚠️ RECUERDA PREGUNTARLE AL CLIENTE:<br>
   <span style="font-size:17px; color:#fff;">
     • ¿REQUIERE FACTURA?<br>
-    • ¿PROPORCIONAR DATOS FISCALES?<br>
+    • PROPORCIONAR DATOS FISCALES CONSTANCIA SAT<br>
   </span>
   <br>
   <span style="font-size:18px; color:#9eff9e;">
-    NO OLVIDES EL "BUENOS DÍAS" Y "FELIZ NAVIDAD" 🙌
+    SALUDA AL CLIENTE "BUENOS DÍAS" Y DA LAS "GRACIAS" 🙌
   </span>
 </div>
 
